Final version maybe?

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/Logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/logo-no-background.svg" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
 
     <meta content="width=device-width, initial-scale=1" name="viewport">
